policies/ db/check-environment-tag.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-database-environment-tag
  annotations:
    policies.kyverno.io/category: OCI Best Practices
spec:
  rules:
    - name: check-database-environment-tag
      match:
        all:
          - ($analyzer.resource.type): terraform-plan
          - (planned_values.root_module.child_modules[].resources[?type=='oci_database_database'][] | length(@) > `0`): true
      assert:
        any:
          - message: Check that the Environment tag for databases conforms to TIAA standard Database naming convention.
            check:
              ~.(planned_values.root_module.child_modules[].resources[?type=='oci_database_database'][]):
                values:
                  ~.(database[]):
                    freeform_tags:
                      Environment:
                        (contains(@, 'Prod') || contains(@, 'Dev') || contains(@, 'Test') || contains(@, 'QA')): true
