policies/ db/check-vcn-names.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-vcn-names
  annotations:
    policies.kyverno.io/category: OCI Best Practices
spec:
  rules:
    - name: check-vcn_names
      match:
        all:
          - ($analyzer.resource.type): terraform-plan
          - (planned_values.root_module.child_modules[].resources[?type=='oci_database_database'][] | length(@) > `0`): true
          #- (configuration.root_module.module_calls.test_instance.expressions | length(@) > `0`): true
      assert:
        all:
          - message: Check if vcn_names contains a specific string.
            check:
              configuration:
                root_module:
                  module_calls:
                    test_instance:
                      expressions:
                        vcn_names:
                          ~.(constant_value[]):
                            (contains(@, 'pd')): true
