policies/ db/restrict-region.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-database-region
  annotations:
    policies.kyverno.io/category: OCI Best Practices
spec:
  rules:
    - name: check-database-region
      match:
        all:
          - ($analyzer.resource.type): terraform-plan
          - (configuration.provider_config.oci.expressions | length(@) > `0`): true
      assert:
        all:
          - message: Check whether DB is spinned on the right region (us-ashburn-1). 
            check:
              ~.(configuration.provider_config.oci.expressions.region):
                constant_value: us-ashburn-1
